# eprem

./: .gitignore  AUTHORS  CHANGELOG.md  LICENSE  Makefile.am  README.md  build.sh  configure.ac  install.sh  parameters.md  prepare  setup.sh  tools.sh
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/developer/: documentation.doctree  index.doctree  release.doctree  tests.doctree
docs/_build/doctrees/guide/: index.doctree  installing.doctree  running_eprem.doctree  visualization.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/developer/: release.rst.txt
docs/_build/html/developer/: documentation.html  index.html  release.html  tests.html
docs/_build/html/guide/: index.html  installing.html  running_eprem.html  visualization.html
docs/developer/: documentation.rst  tests.rst
docs/guide/: index.rst  installing.rst  running_eprem.rst  visualization.rst
examples/: cone-example.ini  cone.ini  eprem_input_file.sample  flux-output.ini  point-observer.ini  template.ini  wind-example.ini  wind.ini
m4/: lx_find_mpi.m4
runtime/: __init__.py  __main__.py  _runtime.py  dunder_main.py  eprem.py  etc.py  project.py  project_main.py  test.cfg  test.py  test.sh  test_runtime.py
scripts/: build.py
src/: Makefile.am  baseTypes.c  baseTypes.h  configuration.c  configuration.h  cubeShellInit.c  cubeShellInit.h  cubeShellStruct.c  cubeShellStruct.h  energeticParticles.c  energeticParticles.h  energeticParticlesBoundary.c  energeticParticlesBoundary.h  energeticParticlesInit.c  energeticParticlesInit.h  energeticParticlesTypes.c  energeticParticlesTypes.h  eprem.c  error.c  error.h  flow.c  flow.h  geometry.c  geometry.h  global.c  global.h  masInterp.c  masInterp.h  mhdIO.c  mhdIO.h  mhdInterp.c  mhdInterp.h  mpiInit.c  mpiInit.h  nearestGridNode.c  nearestGridNode.h  observerOutput.c  observerOutput.h  readMAS.c  readMAS.h  (+10 more)
